fix dropdown width and overflow

--- a/frontend/src/components/cell/styles.css
+++ b/frontend/src/components/cell/styles.css
@@ -57,6 +57,15 @@
     cursor: pointer;
 }
 
+.deviceCell-withSelect {
+    max-width: 50%;
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 0;
+    gap: 6px;
+    align-items: center;
+}
+
 .deviceCell-textWrapper {
     display: flex;
     flex-grow: 1;
@@ -103,10 +112,6 @@
 .deviceCell-units {
     font-size: 12px;
     color: var(--gray-color);
-}
-
-.deviceCell-select {
-    max-width: 50%;
 }
 
 .deviceCell-space {
